--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,7 @@
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
+    "isolatedModules": true,    "jsx": "preserve",
     "incremental": true,
     "plugins": [
       {
